@startuml
skinparam classAttributeIconSize 0
hide circle

class Storage {
}

class ExpenseList {
}

class CategoryFacade {
}

class RecurringExpenseList {
}

LoadCommand "1" ..> "1" Storage
SaveCommand "1" ..> "1" Storage

Storage "1" ..> "1" ExpenseList
Storage "1" ..> "1" CategoryFacade
Storage "1" ..> "1" RecurringExpenseList

CsvUtils "1" .up.> ExpenseList
CsvUtils "1" .up.> CategoryFacade
CsvUtils "1" .up.> RecurringExpenseList

@enduml